dimagi-SalesforceFB/src/objects/DContract__c.object
<CustomObject>
    <fields>
        <fullName>Total_Amount_of_Contract__c</fullName>
        <description>Set by Ops during Contract closing steps</description>
        <inlineHelpText>Set by Ops during Contract closing steps</inlineHelpText>
        <label>Total Amount of Contract</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <description>Services Spend (FB data) +  (Calculated from External Sub-contract Spend + Project Travel Spend + Project Other Spend ; Should align with Intacct Monthly)</description>
        <formula>Services_Spend__c +  (Direct_Costs_Sub_contract_Expenses__c+Direct_Costs_Travel_Expenses__c+Project_Other_Spent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Services Spend (FB data) +  (Calculated from External Sub-contract Spend + Project Travel Spend + Project Other Spend ; Should align with Intacct Monthly)</inlineHelpText>
        <label>Total Calculated Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Costs_Expenses__c</fullName>
        <description>Updated monthly by Jason doing the Intacct data upload. Calculated from the All Time Income * % of Expenses from the Income to date.</description>
        <inlineHelpText>Updated monthly by Jason doing the Intacct data upload. Calculated from the All Time Income * % of Expenses from the Income to date.</inlineHelpText>
        <label>Expense Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Costs__c</fullName>
        <description>This field records all Direct Costs in Intacct for this project</description>
        <inlineHelpText>This field records all Direct Costs in Intacct for this project</inlineHelpText>
        <label>All Intacct Direct Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Labor_Expenses__c</fullName>
        <label>Total Labor Expenses</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Non_Expense_Income_BUDGET__c</fullName>
        <description>Calculated from Total Amount of Contract minus Total Expense Budget</description>
        <formula>IF(  Total_Amount_of_Contract__c   -  Contract_Expense_BUDGET__c  &gt; 0,Total_Amount_of_Contract__c   -  Contract_Expense_BUDGET__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from Total Amount of Contract minus Total Expense Budget</inlineHelpText>
        <label>Total Non Expense Income BUDGET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Non_Expense_Income_Remaining__c</fullName>
        <description>Total Non Expense Income Remaining.  Also can be described as the Total Amount Remaining Minus the Expense Income Remaining.</description>
        <formula>IF(Total_Amount_REMAINING__c - MAX( Contract_Expense_BUDGET__c - Total_Direct_Costs_Expenses__c,0 )&gt;0,(Total_Amount_REMAINING__c - ( Contract_Expense_BUDGET__c - Total_Direct_Costs_Expenses__c )),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Non Expense Income Remaining.  Also can be described as the Total Amount Remaining Minus the Expense Income Remaining.</inlineHelpText>
        <label>Total Non Expense Income Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Services_Work_Remaining__c</fullName>
        <description>Services Budget * (1 - % Work Complete) * % Services budget for GS</description>
        <formula>(1-  Percent_through_SOW_deliverables__c ) *  Services_Budget__c *  of_Services_budget_for_GS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Services Budget * (1 - % Work Complete) * % Services budget for GS</inlineHelpText>
        <label>Total GS Services Work Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twelve_Month_Cash_Minus_Income_EV__c</fullName>
        <description>Calculated based on Contract Dates and Total Non Expense Income Remaining</description>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt;  (MONTH(today()) + 12*YEAR(today()) + 12),
    Total_Non_Expense_Income_Remaining__c  ,
    Total_Non_Expense_Income_Remaining__c   * (12 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and Total Non Expense Income Remaining</inlineHelpText>
        <label>12Month Cash Minus Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twelve_Month_EV__c</fullName>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt;  (MONTH(today()) + 12*YEAR(today()) + 12),
   Total_Amount_REMAINING__c ,
   Total_Amount_REMAINING__c  * (12 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>12Month Cash (EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <description>How many workers are submitting forms using CommCare where 1 is many fewer than expected at contract outset and 5 is many more than expected at contract outset.</description>
        <inlineHelpText>How many workers are submitting forms using CommCare where 1 is many fewer than expected at contract outset and 5 is many more than expected at contract outset.</inlineHelpText>
        <label>Usage (Post Contract data)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weighted_Efficiency__c</fullName>
        <description>Execution Efficiency * Project Services Budget</description>
        <formula>if(Execution_Efficiency__c &gt; 2, 2 * Services_Budget__c, Execution_Efficiency__c * Services_Budget__c)</formula>
        <inlineHelpText>Execution Efficiency * Project Services Budget</inlineHelpText>
        <label>Weighted Efficiency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workflow_Escalation_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow Escalation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X18_Month_Cash_EV__c</fullName>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt; (MONTH(today()) + 12*YEAR(today()) + 18), 
Total_Amount_REMAINING__c , 
Total_Amount_REMAINING__c * (18 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Month Cash (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X18_Month_Cash_Minus_Income_EV__c</fullName>
        <description>Calculated based on Contract Dates and Total Non Expense Income Remaining</description>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt; (MONTH(today()) + 12*YEAR(today()) + 18), 
Total_Non_Expense_Income_Remaining__c , 
Total_Non_Expense_Income_Remaining__c * (18 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and Total Non Expense Income Remaining</inlineHelpText>
        <label>18 Month Cash Minus Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Income__c</fullName>
        <label>2014 Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Income__c</fullName>
        <description>All income for project received in 2015</description>
        <inlineHelpText>All income for project received in 2015</inlineHelpText>
        <label>2015 Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X24_Month_Cash_EV__c</fullName>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt; (MONTH(today()) + 12*YEAR(today()) + 24), 
Total_Amount_REMAINING__c , 
Total_Amount_REMAINING__c * (24 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>24 Month Cash (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X24_Month_Cash_Minus_Income_EV__c</fullName>
        <description>Calculated based on Contract Dates and Total Non Expense Income Remaining</description>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt; (MONTH(today()) + 12*YEAR(today()) + 24), 
Total_Non_Expense_Income_Remaining__c , 
Total_Non_Expense_Income_Remaining__c * (24 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and Total Non Expense Income Remaining</inlineHelpText>
        <label>24 Month Cash Minus Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X6_Month_Cash_EV__c</fullName>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt; (MONTH(today()) + 12*YEAR(today()) + 6), 
Total_Amount_REMAINING__c , 
Total_Amount_REMAINING__c * (6 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>6 Month Cash (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X6_Month_Cash_Minus_Income_EV__c</fullName>
        <description>Calculated based on Contract Dates and Total Non Expense Income Remaining</description>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt; (MONTH(today()) + 12*YEAR(today()) + 6), Total_Non_Expense_Income_Remaining__c , 
Total_Non_Expense_Income_Remaining__c * (6 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and Total Non Expense Income Remaining</inlineHelpText>
        <label>6 Month Cash Minus Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Expense_Income__c</fullName>
        <description>Updated monthly by Jason doing the Intacct data upload. Calculated from the YTD Income * % of Expenses from the contract budget</description>
        <inlineHelpText>Updated monthly by Jason doing the Intacct data upload. Calculated from the YTD Income * % of Expenses from the contract budget</inlineHelpText>
        <label>YTD Expense Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Income__c</fullName>
        <description>Total Income year to date. Updated monthly by Jason doing the Intacct data upload.</description>
        <inlineHelpText>Total Income year to date. Updated monthly by Jason doing the Intacct data upload.</inlineHelpText>
        <label>YTD Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Product_Income__c</fullName>
        <description>Updated monthly by Jason doing the Intacct data upload. Calculated from the YTD Income * % of Product from the contract budget</description>
        <inlineHelpText>Updated monthly by Jason doing the Intacct data upload. Calculated from the YTD Income * % of Product from the contract budget</inlineHelpText>
        <label>YTD Product Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Services_Income__c</fullName>
        <description>Updated monthly by Jason doing the Intacct data upload. Calculated from the YTD Income * % of Services from the contract budget</description>
        <inlineHelpText>Updated monthly by Jason doing the Intacct data upload. Calculated from the YTD Income * % of Services from the contract budget</inlineHelpText>
        <label>YTD Services Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>executive_sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this opportunity has innovation or strategic value not well captured through other impact, team, or profit metrics, it requires an executive sponsor.</inlineHelpText>
        <label>Executive Sponsor</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>custom_contract_sponsor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Services_budget_for_GS__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This is the % of the remaining budget (after removing expenses and buffer %) that is planned for GS work</description>
        <inlineHelpText>This is the % of the remaining budget (after removing expenses and buffer %) that is planned for GS work</inlineHelpText>
        <label>% Services budget for GS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>Ag_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Summary_Overview__c</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <columns>Total_Amount_of_Contract__c</columns>
        <columns>Total_Amount_REMAINING__c</columns>
        <columns>ALL_TIME_Income__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area__c</field>
            <operation>includes</operation>
            <value>Agriculture and Food Security</value>
        </filters>
        <label>Ag Contracts</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Text__c</columns>
        <columns>Maturity_implementation__c</columns>
        <columns>Prime_Contracting_Business_Unit__c</columns>
        <columns>Status__c</columns>
        <columns>Parent_Contract__c</columns>
        <columns>Requires_Report_Out__c</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Account__c</columns>
        <columns>Salesforce_Contract_ID__c</columns>
        <columns>Contracting_Business_Unit__c</columns>
        <columns>ALL_TIME_Income__c</columns>
        <filterScope>Everything</filterScope>
        <label>All by Country</label>
    </listViews>
    <listViews>
        <fullName>Cash_Flow_3Month_12Month</fullName>
        <columns>NAME</columns>
        <columns>Total_Amount_of_Contract__c</columns>
        <columns>Total_Amount_REMAINING__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Three_Month_EV__c</columns>
        <columns>Twelve_Month_EV__c</columns>
        <columns>EV_Date_1__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cash Flow - 3Month / 12Month</label>
    </listViews>
    <listViews>
        <fullName>Contracts</fullName>
        <columns>Requires_Report_Out__c</columns>
        <columns>Account__c</columns>
        <columns>Backstop__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Date_of_Contract_Execution__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Duration_months__c</columns>
        <columns>Prime_Contracting_Business_Unit__c</columns>
        <columns>Product_Text__c</columns>
        <columns>Country_Text__c</columns>
        <columns>Summary_Overview__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contracts</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Funder_View</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Funder_Account__c</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <columns>Total_Amount_of_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>Contracts - Funder View</label>
    </listViews>
    <listViews>
        <fullName>Contracts_to_update_in_CCHQ</fullName>
        <columns>Prime_Contracting_Business_Unit__c</columns>
        <columns>Backstop__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Salesforce_Contract_ID__c</columns>
        <columns>Account_ID__c</columns>
        <columns>Date_of_Contract_Execution__c</columns>
        <columns>Country_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intracompany_Sub_contract__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Date_of_Contract_Execution__c</field>
            <operation>greaterThan</operation>
            <value>11/1/2012</value>
        </filters>
        <label>Contracts to update in CCHQ</label>
    </listViews>
    <listViews>
        <fullName>Contracts_to_update_in_CCHQ1</fullName>
        <columns>Prime_Contracting_Business_Unit__c</columns>
        <columns>Backstop__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Salesforce_Contract_ID__c</columns>
        <columns>Account_ID__c</columns>
        <columns>Date_of_Contract_Execution__c</columns>
        <columns>Country_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intracompany_Sub_contract__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Date_of_Contract_Execution__c</field>
            <operation>greaterThan</operation>
            <value>11/1/2012</value>
        </filters>
        <label>Contracts to update in CCHQ</label>
    </listViews>
    <listViews>
        <fullName>DMoz_projects</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Product_Text__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Date_of_Contract_Execution__c</columns>
        <columns>Total_Amount_of_Contract__c</columns>
        <columns>Account__c</columns>
        <columns>Country_Text__c</columns>
        <columns>Duration_months__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Prime_Contracting_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Prime_Contracting_Business_Unit__c</field>
            <operation>equals</operation>
            <value>DMoz</value>
        </filters>
        <filters>
            <field>Country_Text__c</field>
            <operation>equals</operation>
            <value>Mozambique</value>
        </filters>
        <label>DMoz projects</label>
    </listViews>
    <listViews>
        <fullName>DSA_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Product_Text__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Backstop__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Summary_Overview__c</columns>
        <columns>Maturity_implementation__c</columns>
        <columns>Country_Text__c</columns>
        <columns>Total_Amount_of_Contract__c</columns>
        <columns>YTD_Income__c</columns>
        <columns>Total_Amount_REMAINING__c</columns>
        <columns>Twelve_Month_EV__c</columns>
        <columns>Three_Month_EV__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Prime_Contracting_Business_Unit__c</field>
            <operation>equals</operation>
            <value>DSA</value>
        </filters>
        <label>DSA Contracts</label>
    </listViews>
    <listViews>
        <fullName>DSA_Contracts_Complete</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Prime_Contracting_Business_Unit__c</field>
            <operation>equals</operation>
            <value>DSA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>DSA Contracts - Complete</label>
    </listViews>
    <listViews>
        <fullName>DSA_Contracts_Open</fullName>
        <columns>Requires_Report_Out__c</columns>
        <columns>Backstop__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>NAME</columns>
        <columns>Total_Amount_of_Contract__c</columns>
        <columns>YTD_Income__c</columns>
        <columns>Total_Amount_REMAINING__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Twelve_Month_EV__c</columns>
        <columns>Three_Month_EV__c</columns>
        <columns>Country_Text__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Prime_Contracting_Business_Unit__c</field>
            <operation>equals</operation>
            <value>DSA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>DSA Contracts - Open</label>
    </listViews>
    <listViews>
        <fullName>DWA_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Product_Text__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Long_term_partnership_or_one_off__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Prime_Contracting_Business_Unit__c</field>
            <operation>equals</operation>
            <value>DWA</value>
        </filters>
        <label>DWA Contracts</label>
        <sharedTo>
            <group>DSA</group>
            <group>DSI</group>
            <group>Inc</group>
            <group>Moz</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Execution_Dates</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Contract_Execution__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Total_Amount_of_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Contract_Execution__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:2</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:2</value>
        </filters>
        <label>Execution Dates</label>
    </listViews>
    <listViews>
        <fullName>Summaries</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Contracting_Business_Unit__c</columns>
        <columns>Prime_Contracting_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>Summaries</label>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Greater_than_100_percent</fullName>
        <active>true</active>
        <description>If the field is &gt;100% it should return 100%</description>
        <errorConditionFormula>Percent_through_SOW_deliverables__c &gt; 1</errorConditionFormula>
        <errorDisplayField>Percent_through_SOW_deliverables__c</errorDisplayField>
        <errorMessage>% of work completed cannot exceed 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Contract</fullName>
        <active>false</active>
        <description>If Intra-company subcontract = TRUE then require selecting a parent contract.</description>
        <errorConditionFormula>ISPICKVAL(Intracompany_Sub_contract__c , &apos;Yes&apos;)  &amp;&amp;  ISBLANK( Parent_Contract__c )</errorConditionFormula>
        <errorDisplayField>Parent_Contract__c</errorDisplayField>
        <errorMessage>You must select a parent contract for Intracompany sub-contracts.</errorMessage>
    </validationRules>
</CustomObject>